# LTB2FBX

./: CMakeLists.txt  README.md  ltb2fbx_vs.sln  ltb2fbx_vs.vcxproj  ltb2fbx_vs.vcxproj.filters
Source/: CMakeLists.txt  Converter.cpp  Converter.h  main.cpp
Test/: README.md
Test/res/FoxHowl_Teacher/: FVIEW_hand_Foxhowl_teacher_GR.DTX  FoxHowl_Teacher_BODY_BL.DTX  FoxHowl_Teacher_BODY_GR.DTX  FoxHowl_Teacher_BODY_GR_BR.LTB  FoxHowl_Teacher_HAIR_BL.LTB  FoxHowl_Teacher_THIGH_BL.LTB
Test/res/anim/: M-MOTION_BLUE.LTB
Test/res/m4a1/: pv-m4a1_balance.DTX
Test/res/yunyoyo/: Yun_BODY_GR.LTB  Yun_THIGH_GR.DTX  Yun_THIGH_GR.LTB  Yun_WAIST_GR.DTX
Tools/: README.md  ltb2lta.bat  ltb2lta.py
assimp/include/assimp/: material.inl
assimp/lib/x64/: assimp-vc142-mtd.lib
boost/libs/: libboost_filesystem-iw-mt-x32-1_80.lib  libboost_filesystem-iw-mt-x64-1_80.lib
lithtech/runtime/kernel/: de_file.cpp
lithtech/runtime/model/: d3d_model_load.cpp  model.cpp  model.h
lithtech/runtime/render/: d3dmeshrendobj_skel.cpp  d3dmeshrendobj_skel.h
lithtech/runtime/shared/: LTTexture.cpp  Texture.cpp  Texture.h  bdefs.h  dtxmgr.cpp  engine_vars.cpp  ltcompat.h  pixelformat.cpp  streamsim.cpp  streamsim.h  sysstreamsim.h
lithtech/sdk/: ltbasetypes.h
lithtech/sdk/physics/: coordinate_frame.h
lithtech/stdlith/: dynarray.h  genlist.h  helpers.cpp  l_allocator.cpp  l_allocator.h
lzma/: 7zFile.h  LzFind.c
src/: Converter.cpp  Converter.h  DtxConverter.cpp  DtxConverter.h  LzmaDecoder.cpp  LzmaDecoder.h  main.cpp
